# watanabe

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: catchphrase.rs  emoji.rs  lucky_message.rs  mod.rs  name_react.rs
src/database/: profile.rs
src/database/queries/: get_profile.sql  set_profile.sql  setup.sql
