[package]
name = "watanabe"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rand = "0.8.4"